@@ -10,11 +10,11 @@ import java.net.URI;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.identifiers.SortableIdentifier;
 import no.unit.nva.model.Publication;
 import no.unit.nva.model.Username;
+import no.unit.nva.publication.external.services.RawContentRetriever;
 import no.unit.nva.publication.external.services.UriRetriever;
 import no.unit.nva.publication.model.business.Message;
 import no.unit.nva.publication.model.business.TicketEntry;
@@ -27,7 +27,6 @@ import no.unit.nva.publication.model.storage.TicketDao;
 import nva.commons.apigateway.exceptions.ApiGatewayException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.apigateway.exceptions.ConflictException;
-import nva.commons.apigateway.exceptions.ForbiddenException;
 import nva.commons.apigateway.exceptions.NotFoundException;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.core.attempt.FunctionWithException;
@@ -45,13 +44,13 @@ public class TicketService extends ServiceWithTransactions {
     private final ResourceService resourceService;
     private final String tableName;
 
-    public TicketService(AmazonDynamoDB client, UriRetriever uriRetriever) {
+    public TicketService(AmazonDynamoDB client, RawContentRetriever uriRetriever) {
         this(client, DEFAULT_IDENTIFIER_PROVIDER, uriRetriever);
     }
 
     protected TicketService(AmazonDynamoDB client,
                             Supplier<SortableIdentifier> identifierProvider,
-                            UriRetriever uriRetriever) {
+                            RawContentRetriever uriRetriever) {
         super(client);
         this.identifierProvider = identifierProvider;
         tableName = RESOURCES_TABLE_NAME;
@@ -127,7 +126,7 @@ public class TicketService extends ServiceWithTransactions {
         return dao.fetchTicketMessages(getClient())
                    .map(MessageDao::getData)
                    .map(Message.class::cast)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     public TicketEntry refreshTicket(TicketEntry ticket) {
@@ -237,10 +236,9 @@ public class TicketService extends ServiceWithTransactions {
                                                ticketEntry.getClass()).orElseThrow();
     }
 
-    private Publication fetchPublicationToEnsureItExists(TicketEntry ticketEntry) throws ForbiddenException {
-        var userInstance = UserInstance.create(ticketEntry.getOwner(), ticketEntry.getCustomerId());
-        return attempt(() -> resourceService.getPublication(userInstance, ticketEntry.getResourceIdentifier()))
-                   .orElseThrow(fail -> new ForbiddenException());
+    private Publication fetchPublicationToEnsureItExists(TicketEntry ticketEntry) {
+        return attempt(() -> resourceService.getPublicationByIdentifier(ticketEntry.getResourceIdentifier()))
+                   .orElseThrow();
     }
 
     private <T extends TicketEntry> T createTicketForPublication(Publication publication,
