@@ -15,6 +15,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 import com.amazonaws.services.dynamodbv2.AmazonDynamoDB;
@@ -51,6 +52,7 @@ import org.junit.jupiter.api.function.Executable;
 import org.mockito.ArgumentCaptor;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.eventbridge.model.PutEventsRequestEntry;
+import software.amazon.awssdk.services.s3.S3Client;
 
 class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
 
@@ -67,7 +69,10 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
     private ResourceService resourceService;
     private TicketService ticketService;
     private AmazonDynamoDB dynamoDbClient;
+    private S3Client s3Client;
+    private Environment environment;
 
+    @Override
     @BeforeEach
     public void init() {
         super.init();
@@ -78,7 +83,9 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
         dynamoDbClient = super.client;
         this.resourceService = spy(getResourceServiceBuilder().build());
         this.ticketService = getTicketService();
-        this.handler = new EventBasedBatchScanHandler(resourceService, eventBridgeClient);
+        this.s3Client = mock(S3Client.class);
+        this.environment = mock(Environment.class);
+        this.handler = new EventBasedBatchScanHandler(resourceService, eventBridgeClient, s3Client, environment);
     }
 
     @Test
@@ -102,6 +109,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
         var initialResource = resourceService.getResourceByIdentifier(createdPublication.getIdentifier());
         var originalDao = new ResourceDao(initialResource).fetchByIdentifier(client, RESOURCES_TABLE_NAME);
         var originalTicket = TicketEntry.requestNewTicket(createdPublication, PublishingRequestCase.class)
+                                 .withOwner(UserInstance.fromPublication(createdPublication).getUsername())
                                  .persistNewTicket(ticketService);
         var originalTicketDao = fetchTicketDao(originalTicket.getIdentifier());
 
@@ -126,6 +134,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
         var initialResource = resourceService.getResourceByIdentifier(createdPublication.getIdentifier());
         var originalDao = new ResourceDao(initialResource).fetchByIdentifier(client, RESOURCES_TABLE_NAME);
         var originalTicket = TicketEntry.requestNewTicket(createdPublication, PublishingRequestCase.class)
+                                 .withOwner(UserInstance.fromPublication(createdPublication).getUsername())
                                  .persistNewTicket(ticketService);
         var originalTicketDao = fetchTicketDao(originalTicket.getIdentifier());
 
@@ -149,6 +158,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
         var initialResource = resourceService.getResourceByIdentifier(createdPublication.getIdentifier());
         var originalDao = new ResourceDao(initialResource).fetchByIdentifier(client, RESOURCES_TABLE_NAME);
         var originalTicket = TicketEntry.requestNewTicket(createdPublication, PublishingRequestCase.class)
+                                 .withOwner(UserInstance.fromPublication(createdPublication).getUsername())
                                  .persistNewTicket(ticketService);
         var originalTicketDao = fetchTicketDao(originalTicket.getIdentifier());
 
@@ -194,7 +204,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
                                     .build();
         handler.handleRequest(eventToInputStream(secondScanRequest), output, context);
 
-        ArgumentCaptor<Map<String, AttributeValue>> startingPointsCapturer = ArgumentCaptor.forClass(Map.class);
+        var startingPointsCapturer = ArgumentCaptor.forClass(Map.class);
         verify(resourceService, atLeastOnce()).scanResources(anyInt(), startingPointsCapturer.capture(), any());
         var scanStartingPointSentToTheService = startingPointsCapturer.getValue();
 
@@ -224,7 +234,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
         doThrow(new RuntimeException(expectedExceptionMessage)).when(spiedResourceService)
             .scanResources(anyInt(), any(), any());
 
-        handler = new EventBasedBatchScanHandler(spiedResourceService, eventBridgeClient);
+        handler = new EventBasedBatchScanHandler(spiedResourceService, eventBridgeClient, s3Client, environment);
         Executable action = () -> handler.handleRequest(createInitialScanRequest(ONE_ENTRY_PER_EVENT), output, context);
         assertThrows(RuntimeException.class, action);
         assertThat(logger.getMessages(), containsString(expectedExceptionMessage));
@@ -273,7 +283,7 @@ class EventBasedBatchScanHandlerTest extends ResourcesLocalTest {
 
     private ScanDatabaseRequest consumeLatestEmittedEvent() {
         var allRequests = eventBridgeClient.getRequestEntries();
-        var latest = allRequests.remove(allRequests.size() - 1);
+        var latest = allRequests.removeLast();
         return attempt(() -> ScanDatabaseRequest.fromJson(latest.detail())).orElseThrow();
     }
 
